--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ td {
   font-family: Berlin Sans FB;
   font-size: 3pc;
   background-color: rgba(255, 153, 0, 0.5);
+  color: white;
 }
 
 td:hover {
@@ -55,6 +56,7 @@ td:hover {
 
 #tit {
   font-size: 3.2pc;
+  color: white;
 }
 
 
